--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+/getmuscle-haeun/node_modules
+/getmuscle-haeun/.pnp
 .pnp.js
+/mongodb-mongoose/.env
+/mongodb-mongoose/node_modules
+
+/mongodb-mongoose/dkeun-426809-a17e6bec7a83.json
 
 # testing
 /coverage
 
 # production
-/build
+/getmuscle-haeun/build
 
 # misc
 .DS_Store
